--- a/src/styles/components/_projects-list.scss
+++ b/src/styles/components/_projects-list.scss
@@ -9,6 +9,7 @@
 }
 
 .projects {
+  width: inherit;
   display: grid;
   grid-template-rows: min-content min-content;
   align-items: center;
